# radar-evaluator

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  config.json  industry_questions.json  pyproject.toml  radar_evaluator.py  requirements.txt
.github/workflows/: ci.yml
tests/: __init__.py  conftest.py  test_radar_evaluator.py  test_smoke.py
