[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radar-evaluator"
version = "0.1.0"
description = "Radar Evaluator Project"
authors = [
    {name = "Your Name", email = "your@email.com"}
]
requires-python = ">=3.8"
dependencies = [
    "together>=0.2.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    "tqdm>=4.62.0",
    "pathlib2>=2.3.0; python_version < \"3.4\"",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8", 
    "mypy",
    "pytest",
    "pytest-cov",
    "pandas-stubs",
    "types-tqdm",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\\.pyi?$'
extend-exclude = '''
/(\.eggs|\.git|\.hg|\.mypy_cache|\.tox|\.venv|build|dist)/
'''

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503", "E501"]

[tool.mypy]
python_version = "3.9"
exclude = [
    "/site-packages/",
    "tests/",
    "scripts/",
]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=radar_evaluator",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
] 